--- a/Main.html
+++ b/Main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Страхова компанія "Insurance"</title>
-    <link rel="stylesheet" href="Styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
